[gd_scene load_steps=6 format=3 uid="uid://ds4u6yauu4ssm"]

[ext_resource type="Script" uid="uid://cm6fh1dlhfk7j" path="res://ui/main_ui.gd" id="1_m6rnm"]
[ext_resource type="PackedScene" uid="uid://tr7amj4h6rn6" path="res://ui/spots_tab.tscn" id="2_qry5k"]
[ext_resource type="PackedScene" uid="uid://dwlxt0iprcf8c" path="res://ui/bulk_spot_window.tscn" id="3_2unuh"]
[ext_resource type="PackedScene" uid="uid://dffhglkusahi1" path="res://ui/cameras_tab.tscn" id="3_186kx"]
[ext_resource type="PackedScene" uid="uid://dx7ktkeex2mww" path="res://ui/select_database_dialog.tscn" id="7_ti1yg"]

[node name="MainUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6rnm")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="File" type="PopupMenu" parent="Panel/MarginContainer/VBoxContainer/MenuBar"]
unique_name_in_owner = true
size = Vector2i(152, 128)
min_size = Vector2i(152, 0)
item_count = 3
item_0/text = "Create Database"
item_0/id = 1
item_1/text = "Load Database"
item_1/id = 3
item_2/text = "Quit"
item_2/id = 2

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Spots" parent="Panel/MarginContainer/VBoxContainer/TabContainer" instance=ExtResource("2_qry5k")]
unique_name_in_owner = true
layout_mode = 2

[node name="Cameras" parent="Panel/MarginContainer/VBoxContainer/TabContainer" instance=ExtResource("3_186kx")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BulkSpotFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open File(s)"
initial_position = 1
size = Vector2i(617, 196)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.png,*.jpg;Image Files;image/png,image/jpg")
use_native_dialog = true

[node name="BulkSpotWindow" parent="." instance=ExtResource("3_2unuh")]
unique_name_in_owner = true
visible = false

[node name="SelectDatabaseDialog" parent="." instance=ExtResource("7_ti1yg")]
unique_name_in_owner = true
